# minimal-memorial-website

./: .coverage  .gitignore  PLAN.md  README.md  main.py  pyproject.toml
.github/: .todo.md  CONTACT_FIELDS_PLAN.md  HOME_PAGE.md  INVITATION_PLAN.md  MEMORY_WALL_PAGINATION_PLAN.md  PLAN.md  SLIDESHOW_LAYOUT_IMPROVEMENT_PLAN.md  SLIDESHOW_PLAN.md  adddomain.md  copilot-instructions.md  instructions.md  presigned_url_migration_plan.md  ssl-connection-closed-report.md
app/: __init__.py  config.py  extensions.py  forms.py  models.py  routes.py
app/services/: __init__.py  notifications.py  s3.py  storage.py  tributes.py
app/templates/: admin_delete.html  base.html  home.html  index.html  invitation.html  slideshow.html  tribute_detail.html
app/templates/partials/: _carousel.html  _form.html  _tribute_list.html
migrations/versions/: 07075a1ea27e_use_timezone_aware_timestamps.py  2fa2fa03b0ef_create_tribute_tables.py  f4f1e07911dc_add_s3_metadata_columns.py
static/css/: main.css  slideshow.css
static/js/: main.js  slideshow.js
tests/: conftest.py  test_config.py  test_forms.py  test_models.py  test_routes.py  test_s3.py  test_services.py  test_storage.py
tools/: migrate_photos_to_s3.py
